--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "create":"ng g c components/newcomponent"
+    "create":"ng g c components/newcomponent",
+    "worker":"ng add @angular/pwa --project app --force"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@angular/service-worker": "^16.0.0",
     "@apollo/client": "^3.7.16",
     "apollo-angular": "^5.0.0",
     "axios": "^1.4.0",
