--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "app",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build-prod": "ng build --outputHashing=all",
     "create": "ng g c components/dialog/confirmation",
     "worker": "ng add @angular/pwa --project app --force"
   },
