--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build-prod": "ng build --outputHashing=all",
+    "build-prod": "ng build --output-hashing=all",
     "create": "ng g c components/dialog/confirmation",
     "worker": "ng add @angular/pwa --project app --force"
   },
