trying github pages deploy

--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,22 @@
               ],
               "outputHashing": "all"
             },
+            "production_github": {
+              "baseHref": "/staticWebApp/",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
