--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,13 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/index.html",
+                  "with": "src/index.github.html"
+                }
+              ]
             },
             "development": {
               "buildOptimizer": false,
