--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build -- --configuration production_github
+        run: npm run build:github
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
