--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build-prod": "ng build --output-hashing=all",
+    "prebuild:github": "cp src/index.github.html src/index.html",
+    "build:github": "npm run prebuild:prod && ng build --configuration production_github",
     "create": "ng g c modules/songs/worship-songs",
     "worker": "ng add @angular/pwa --project app --force"
   },
