removed illegal replacement

--- a/angular.json
+++ b/angular.json
@@ -66,13 +66,7 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all",
-              "fileReplacements": [
-                {
-                  "replace": "src/index.html",
-                  "with": "src/index.github.html"
-                }
-              ]
+              "outputHashing": "all"
             },
             "development": {
               "buildOptimizer": false,
