--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "build-prod": "ng build --output-hashing=all",
     "prebuild:github": "cp src/index.github.html src/index.html",
-    "build:github": "npm run prebuild:github && ng build --configuration production_github",
+    "build:github": "npm run prebuild:github && ng build --configuration production_github --base-href /staticWebApp/ ",
     "create": "ng g c modules/songs/worship-songs",
     "worker": "ng add @angular/pwa --project app --force"
   },
