--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,35 @@
-name: Deploy to GitHub Pages
+# name: Deploy to GitHub Pages
 
-on:
-  push:
-    branches:
-      - main  # or 'master' if that's your default branch
+# on:
+#   push:
+#     branches:
+#       - main  # or 'master' if that's your default branch
 
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout repo
+#         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
 
-      - name: Build Angular app
-        run: npm run build:github
+#       - name: Build Angular app
+#         run: npm run build:github
 
-      - name: Copy index.html to 404.html
-        run: cp dist/index.html dist/404.html
+#       - name: Copy index.html to 404.html
+#         run: cp dist/index.html dist/404.html
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages           # Target branch
-          folder: dist  # Path to the Angular build output
-          token: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Deploy to GitHub Pages
+#         uses: JamesIves/github-pages-deploy-action@v4
+#         with:
+#           branch: gh-pages           # Target branch
+#           folder: dist  # Path to the Angular build output
+#           token: ${{ secrets.GITHUB_TOKEN }}
